--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -21,6 +21,31 @@
   <script>
     tailwind.config = {
       darkMode: 'class',
+      plugins: [
+        function({ addUtilities, addComponents, e, prefix, config }) {
+          const newUtilities = {
+            '.line-clamp-1': {
+              overflow: 'hidden',
+              display: '-webkit-box',
+              '-webkit-box-orient': 'vertical',
+              '-webkit-line-clamp': '1',
+            },
+            '.line-clamp-2': {
+              overflow: 'hidden',
+              display: '-webkit-box',
+              '-webkit-box-orient': 'vertical',
+              '-webkit-line-clamp': '2',
+            },
+            '.line-clamp-3': {
+              overflow: 'hidden',
+              display: '-webkit-box',
+              '-webkit-box-orient': 'vertical',
+              '-webkit-line-clamp': '3',
+            },
+          }
+          addUtilities(newUtilities)
+        },
+      ],
       theme: {
         extend: {
           colors: {
