--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -73,7 +73,9 @@
             <a href="/images" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
               <i class="fas fa-image mr-2"></i> AI Images
             </a>
-
+            <a href="/website-builder/dashboard" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+              <i class="fas fa-globe mr-2"></i> Website Builder
+            </a>
           </div>
         </div>
 
@@ -100,6 +102,9 @@
             <i class="fas fa-chevron-down text-xs"></i>
           </button>
           <div id="resources-dropdown" class="absolute left-0 mt-2 w-48 bg-dark-100 border border-gray-800 rounded-md shadow-lg py-1 z-10 dropdown-menu">
+            <a href="/packages" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+              <i class="fas fa-box mr-2"></i> Packages
+            </a>
             <a href="/demo" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
               <i class="fas fa-laptop-code mr-2"></i> Demo
             </a>
@@ -176,6 +181,9 @@
             <a href="/images" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-image mr-2"></i> AI Images
             </a>
+            <a href="/website-builder/dashboard" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-globe mr-2"></i> Website Builder
+            </a>
           </div>
         </div>
 
@@ -202,6 +210,9 @@
             <i class="fas fa-chevron-down text-xs"></i>
           </button>
           <div id="resources-dropdown-mobile" class="hidden pl-4 mt-1 border-l border-gray-700">
+            <a href="/packages" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-box mr-2"></i> Packages
+            </a>
             <a href="/demo" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-laptop-code mr-2"></i> Demo
             </a>
