--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -73,6 +73,12 @@
             <a href="/images" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
               <i class="fas fa-image mr-2"></i> AI Images
             </a>
+            <a href="/digital-twin/browse" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+              <i class="fas fa-robot mr-2"></i> Digital Twins
+            </a>
+            <a href="/neural-dreamscape/browse" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+              <i class="fas fa-brain mr-2"></i> Neural Dreamscape
+            </a>
             <a href="/website-builder/dashboard" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
               <i class="fas fa-globe mr-2"></i> Website Builder
             </a>
@@ -180,6 +186,12 @@
             </a>
             <a href="/images" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-image mr-2"></i> AI Images
+            </a>
+            <a href="/digital-twin/browse" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-robot mr-2"></i> Digital Twins
+            </a>
+            <a href="/neural-dreamscape/browse" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-brain mr-2"></i> Neural Dreamscape
             </a>
             <a href="/website-builder/dashboard" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-globe mr-2"></i> Website Builder
