--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -33,6 +33,9 @@
       <div class="flex justify-between items-center">
         <h2 class="text-xl font-semibold mb-4">Account Settings</h2>
         <div class="flex space-x-4">
+          <a href="/digital-twin/dashboard" class="text-neon-purple hover:underline flex items-center">
+            <i class="fas fa-robot mr-1"></i> My Digital Twin
+          </a>
           <a href="/profile/content" class="text-neon-purple hover:underline flex items-center">
             <i class="fas fa-newspaper mr-1"></i> My Content
           </a>
